# snek

./: .gitignore  Makefile  README.md  pyproject.toml
snek/: dqn_agent.py  snek_env.py  train_snek.py
