[tool.poetry]
name = "snek"
version = "0.1.0"
description = ""
authors = ["Trent Yates <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
torch = "^2.4.0"
gym = "^0.26.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
